[gd_scene format=3 uid="uid://c7g3k3am8c8kq"]

[ext_resource type="Script" uid="uid://bhk04njd8rnhm" path="res://scenes/JoinMenu/join_menu.gd" id="1_6w2sd"]
[ext_resource type="Texture2D" uid="uid://1ks0wp4bcohp" path="res://resources/ui/JoinMenu/FONDO-SOLO_SELECT SCREEN copy 9_SELECT SCREEN copy 9.png" id="2_jq2j1"]
[ext_resource type="Script" uid="uid://d4ajt7xdnrh10" path="res://scenes/Title Screen/fade_rect.gd" id="2_lkm7d"]
[ext_resource type="Texture2D" uid="uid://x3x25uvacsak" path="res://resources/ui/references/BOCETO HUD_SELECT SCREEN.png" id="5_jq2j1"]
[ext_resource type="FontFile" uid="uid://dt3evmpk53wc3" path="res://resources/ui/fonts/Pix32.ttf" id="6_4nuc6"]
[ext_resource type="PackedScene" uid="uid://bm4vgo881wyxo" path="res://scenes/JoinMenu/slot_1.tscn" id="6_wp0ek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp0ek"]
content_margin_bottom = 10.0
bg_color = Color(0.25882354, 0.23137255, 0.32941177, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5y4vy"]
bg_color = Color(0.7137255, 0.64705884, 0.9098039, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xaq0"]
bg_color = Color(0.7137255, 0.64705884, 0.9098039, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jq2j1"]
content_margin_bottom = 10.0
bg_color = Color(0.9098039, 0.27450982, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nuc6"]
bg_color = Color(0.9490196, 0.75686276, 0.14509805, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sibtc"]
bg_color = Color(0.9490196, 0.75686276, 0.14509805, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="JoinMenu" type="Control" unique_id=1914620458]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6w2sd")

[node name="Fondo" type="TextureRect" parent="." unique_id=1638107198]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_jq2j1")
expand_mode = 2

[node name="Slot1" parent="." unique_id=2129898466 instance=ExtResource("6_wp0ek")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 723.0
offset_top = 338.0
offset_right = 2643.0
offset_bottom = 338.0
grow_horizontal = 1
grow_vertical = 1

[node name="Slot2" parent="." unique_id=1101699329 instance=ExtResource("6_wp0ek")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1208.0
offset_top = 336.0
offset_right = 3128.0
offset_bottom = 336.0
grow_horizontal = 1
grow_vertical = 1

[node name="Slot3" parent="." unique_id=310266030 instance=ExtResource("6_wp0ek")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 724.0
offset_top = 773.0
offset_right = 2644.0
offset_bottom = 773.0
grow_horizontal = 1
grow_vertical = 1

[node name="Slot4" parent="." unique_id=962068941 instance=ExtResource("6_wp0ek")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1200.0
offset_top = 753.0
offset_right = 3120.0
offset_bottom = 753.0
grow_horizontal = 1
grow_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1000762157]
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer" unique_id=1026987662]
layout_mode = 2
text = "Join Match"

[node name="Instructions" type="Label" parent="VBoxContainer" unique_id=1766686980]
layout_mode = 2
text = "Press A on gamepad or Space to join. Press Start/Enter to begin."

[node name="Spacer" type="Control" parent="VBoxContainer" unique_id=479186798]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Slots" type="VBoxContainer" parent="VBoxContainer" unique_id=1971191314]
layout_mode = 2

[node name="Slot11" type="Label" parent="VBoxContainer/Slots" unique_id=1256519764]
layout_mode = 2
text = "Player 1: Not joined"

[node name="Slot21" type="Label" parent="VBoxContainer/Slots" unique_id=820415140]
layout_mode = 2
text = "Player 2: Not joined"

[node name="Slot31" type="Label" parent="VBoxContainer/Slots" unique_id=1732971242]
layout_mode = 2
text = "Player 3: Not joined"

[node name="Slot41" type="Label" parent="VBoxContainer/Slots" unique_id=1361477183]
layout_mode = 2
text = "Player 4: Not joined"

[node name="Hint" type="Label" parent="VBoxContainer" unique_id=2106697251]
layout_mode = 2
text = "Need 2+ players to start"

[node name="MenuButtons" type="VBoxContainer" parent="." unique_id=2072738913]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -901.0
offset_top = 350.75
offset_right = -640.0
offset_bottom = 450.75
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="ATRAS" type="Button" parent="MenuButtons" unique_id=464763720]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.25882354, 0.23137255, 0.32941177, 1)
theme_override_colors/font_hover_color = Color(0.25882354, 0.23137255, 0.32941177, 1)
theme_override_fonts/font = ExtResource("6_4nuc6")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wp0ek")
theme_override_styles/hover = SubResource("StyleBoxFlat_5y4vy")
theme_override_styles/focus = SubResource("StyleBoxFlat_4xaq0")
text = "ATRAS"

[node name="FadeLayer" type="CanvasLayer" parent="." unique_id=1801222444]

[node name="FadeRect" type="ColorRect" parent="FadeLayer" unique_id=1227673614]
visible = false
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("2_lkm7d")
metadata/_edit_use_anchors_ = true

[node name="Fondo2" type="TextureRect" parent="." unique_id=1238441389]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_jq2j1")
expand_mode = 2

[node name="Referencia" type="TextureRect" parent="." unique_id=1665918853]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_jq2j1")
expand_mode = 3

[node name="StatusLabel" type="Label" parent="." unique_id=849379552]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -32.5
offset_right = 78.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9098039, 0.27450982, 0, 1)
theme_override_fonts/font = ExtResource("6_4nuc6")
theme_override_font_sizes/font_size = 30
text = "FALTAN
JUGADORES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="." unique_id=756086474]
custom_minimum_size = Vector2(-0.055, 55)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -23.5
offset_right = 87.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.8, 0.26666668, 0.08235294, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.26666668, 0.08235294, 1)
theme_override_fonts/font = ExtResource("6_4nuc6")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_jq2j1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4nuc6")
theme_override_styles/focus = SubResource("StyleBoxFlat_sibtc")
text = "START"

[connection signal="pressed" from="MenuButtons/ATRAS" to="." method="_on_atras_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
